--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,9 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-/>
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -29,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Execlus Labs</title>
+    <title>Exelus Labs</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
